--- a/index.html
+++ b/index.html
@@ -16,14 +16,6 @@
         <!-- Nunito, Open Sans, & Inconsolata -->
         <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Nunito&family=Open+Sans&display=swap" rel="stylesheet">
 
-        <!-- Loader -->
-        <script rel="preload" src="//code.jquery.com/jquery-1.10.2.js"></script>
-        <script rel="preload">
-            $(function () {
-                $("#theme-switch").load("/includes/theme-switch.html");
-            });
-        </script>
-
         <!-- Theme switcher-->
         <script src="/js/theme-switch.js"></script>
 
@@ -43,12 +35,14 @@
             <a tabindex="2" href="about.html">About Me</a>
             <a tabindex="4" class="home-resume-link" href="resume.html">Resume</a>
             <a tabindex="5" class="home-github-link" href="https://github.com/dcalvo4-dev" target="_blank">GitHub</a>
-            </li>
         </div>
     </body>
 
     <footer>
         Powered by <a href="https://github.com/">Github.com</a>
-        <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+        <div>
+            Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+        </div>
     </footer>
+
 </html>
