Broken link update

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <a tabindex="1" href="index.html">Home</a>
             <a tabindex="2" href="about.html">About Me</a>
             <a tabindex="4" class="home-resume-link" href="resume.html">Resume</a>
-            <a tabindex="5" class="home-github-link" href="https://github.com/dcalvo4-dev" target="_blank">GitHub</a>
+            <a tabindex="5" class="home-github-link" href="https://github.com/daniel-citrus" target="_blank">GitHub</a>
         </div>
     </body>
 
