--- a/about.html
+++ b/about.html
@@ -42,9 +42,8 @@
             <h2>Bio</h2>
             <p>
                 Hello! My name is Daniel Calvo and I am a Computer Science Alumni from <a target="_blank" href="https://en.wikipedia.org/wiki/Texas_A%26M_University%E2%80%93Commerce">
-                Texas A&M University-Commerce</a>. I am currently a Data Analyst at the Alameda County Community Food Bank.
-                At work, I like to take advantage of my programming background by constantly searching for process improvements
-                that I can implement mainly through task automation. During my free time at home I enjoy casual studying and practicing my hobby in web development.
+                Texas A&M University-Commerce</a>. I am currently a Data Analyst for Pacific Gas & Electric. At the moment, my main responsibility is to assist the Risk Management
+                team in calculating Risk Spending Efficiency for the 2022 Wildfire Mitigation Plan.
             </p>
         </div>
         <div id="interests">
