--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
         <!-- Nunito, Open Sans, & Inconsolata -->
         <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Nunito&family=Open+Sans&display=swap" rel="stylesheet">
         <!-- Theme switcher-->
-        <script src="/js/theme-switch.js"></script>
+        <script defer src="/js/theme-switch.js"></script>
 
         <title>About Me</title>
     </head>
