--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Nunito&family=Open+Sans&display=swap" rel="stylesheet">
 
         <!-- Theme switcher-->
-        <script src="/js/theme-switch.js"></script>
+        <script defer src="/js/theme-switch.js"></script>
 
         <title>Daniel's Webpage</title>
     </head>
@@ -44,5 +44,4 @@
             Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
         </div>
     </footer>
-
 </html>
