--- a/resume.html
+++ b/resume.html
@@ -18,7 +18,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Nunito&family=Open+Sans&display=swap"
             rel="stylesheet">
         <!-- Theme switcher-->
-        <script src="/js/theme-switch.js"></script>
+        <script defer src="/js/theme-switch.js"></script>
 
         <title>Resume</title>
     </head>
