Removed redundant tags and styling

--- a/about.html
+++ b/about.html
@@ -22,19 +22,15 @@
     </head>
 
     <body>
-        <div class="flex">
-            <div class="flex-item">
-                <div role="nagivation" class="top-nav">
-                    <a class="home-nav" tabindex="1" href="index.html">Home</a>
-                    <a class="home-nav" tabindex="2" href="about.html">About Me</a>
-                    <a class="home-nav" tabindex="3" href="resume.html" class="resume-link">Resume</a>
-                    <a class="home-nav" tabindex="4" href="https://github.com/dcalvo4-dev" target="_blank"
-                        class="github-link">GitHub</a>
-                </div>
+        <div class="top-container">
+            <div role="nagivation" class="top-nav">
+                <a tabindex="1" href="index.html">Home</a>
+                <a tabindex="2" href="about.html">About Me</a>
+                <a tabindex="3" href="resume.html" class="resume-link">Resume</a>
+                <a tabindex="4" href="https://github.com/daniel-citrus" target="_blank"
+                    class="github-link">GitHub</a>
             </div>
-            <div class="flex">
-                <div class="flex-item" id="theme-switch"></div>
-            </div>
+            <div id="theme-switch"></div>
         </div>
 
         <div id="about-typewriter" class="type-writer">About Me</div>
@@ -49,8 +45,8 @@
         <div id="interests">
             <h2>Interests</h2>
             <h3>Finance</h3>
-            <div class="flex">
-                <div class="flex-item">
+            <div class="interest">
+                <div class="description">
                     I am an avid learner of finance and a habitual (but healthy) money saver. Currently, I enjoy simple
                     investing and thorough budgeting in order to reach my ultimate goal of financial
                     independence and retiring early or
@@ -59,22 +55,18 @@
                     <span aria-hidden="true">&#128293;</span>.
                 </div>
 
-                <div class="flex-item">
-                    <img class="center" id="money_saver" src="/media/Saving_Money.jpg" alt="Coins being placed into a jar.">
-                </div>
+                <img id="money_saver" src="/media/Saving_Money.jpg" alt="Coins being placed into a jar.">
             </div>
 
             <h3>Fitness</h3>
-            <div class="flex">
-                <div class="flex-item">
+            <div class="interest">
+                <div class="description">
                     I strongly believe in health and fitness. Bodyweight exercises ensure a healthy body while also
                     providing functional and not only for looks muscles. At the moment, I am enjoying the
                     <a target="_blank" href="https://www.reddit.com/r/bodyweightfitness/wiki/kb/recommended_routine">Recommended Routine</a>
                     which is a Calisthenics/Bodyweight routine designed for beginner through intermediate fitness enthusiasts.
                 </div>
-                <div class="flex-item">
-                    <img id="pushups_gif" src="/media/pushups.gif" alt="A person doing pushups.">
-                </div>
+                <img id="pushups_gif" src="/media/pushups.gif" alt="A person doing pushups.">
             </div>
         </div>
     </body>
