--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <!-- Nunito, Open Sans, & Inconsolata -->
-        <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Nunito&family=Open+Sans&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Nunito&family=Open+Sans&display=swap"
+            rel="stylesheet">
 
         <!-- Theme switcher-->
         <script defer src="/js/theme-switch.js"></script>
@@ -23,14 +24,10 @@
     </head>
 
     <body>
-        <div class="flex">
-            <div class="flex">
-                <div class="flex-item" id="theme-switch"></div>
-            </div>
-        </div>
+        <div class="home" id="theme-switch"></div>
 
         <div id="home-typewriter" class="type-writer">My name is Daniel, welcome to my page!</div>
-        <div class="main-menu flex-column" role="navigation">
+        <div class="main-menu" role="navigation">
             <a tabindex="1" href="index.html">Home</a>
             <a tabindex="2" href="about.html">About Me</a>
             <a tabindex="4" class="home-resume-link" href="resume.html">Resume</a>
@@ -41,7 +38,9 @@
     <footer>
         Powered by <a href="https://github.com/">Github.com</a>
         <div>
-            Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+            Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a
+                href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
         </div>
     </footer>
+
 </html>
