--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        
+
         <!-- Main Stylesheet-->
         <link href="/css/styles.css" type="text/css" rel="stylesheet">
         <!-- Stylesheet containing theme colors -->
@@ -24,18 +24,14 @@
     </head>
 
     <body>
-        <div class="flex">
-            <div class="flex-item">
-                <div role="nagivation" class="top-nav">
-                    <a class="home-nav" tabindex="1" href="index.html">Home</a>
-                    <a class="home-nav" tabindex="2" href="about.html">About Me</a>
-                    <a class="home-nav" tabindex="3" href="resume.html" class="resume-link">Resume</a>
-                    <a class="home-nav" tabindex="4" href="https://github.com/dcalvo4-dev" target="_blank" class="github-link">GitHub</a>
-                </div>
+        <div class="top-container">
+            <div role="nagivation" class="top-nav">
+                <a tabindex="1" href="index.html">Home</a>
+                <a tabindex="2" href="about.html">About Me</a>
+                <a tabindex="3" href="resume.html" class="resume-link">Resume</a>
+                <a tabindex="4" href="https://github.com/daniel-citrus" target="_blank" class="github-link">GitHub</a>
             </div>
-            <div class="flex">
-                <div class="flex-item" id="theme-switch"></div>
-            </div>
+            <div class="theme-switch" id="theme-switch"></div>
         </div>
 
         <div id="resume-typewriter" class="type-writer">Resume</div>
@@ -45,7 +41,8 @@
     <footer>
         Powered by <a href="https://github.com/">Github.com</a>
         <div>
-            Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+            Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a
+                href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
         </div>
     </footer>
 
