--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+        <!-- Stylesheets -->
         <link href="/css/styles.css" type="text/css" rel="stylesheet">
-        <!-- Stylesheet -->
+        <!-- Stylesheet for theme switch -->
         <link href="/css/styles.css" rel="stylesheet" type="text/css" id="theme-switcher-id" />
         <!-- Google Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,11 +17,10 @@
         <!-- Nunito, Open Sans, & Inconsolata -->
         <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Nunito&family=Open+Sans&display=swap"
             rel="stylesheet">
-
         <!-- Theme switcher-->
         <script defer src="/js/theme-switch.js"></script>
 
-        <title>Daniel's Webpage</title>
+        <title>Welcome</title>
     </head>
 
     <body>
