--- a/about.html
+++ b/about.html
@@ -7,14 +7,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+        <!-- Stylesheets -->
         <link href="/css/styles.css" type="text/css" rel="stylesheet">
-        <!-- Stylesheet -->
+        <!-- Stylesheet for theme switch -->
         <link href="/css/styles.css" rel="stylesheet" type="text/css" id="theme-switcher-id" />
         <!-- Google Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <!-- Nunito, Open Sans, & Inconsolata -->
-        <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Nunito&family=Open+Sans&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Nunito&family=Open+Sans&display=swap"
+            rel="stylesheet">
         <!-- Theme switcher-->
         <script defer src="/js/theme-switch.js"></script>
 
@@ -27,8 +29,7 @@
                 <a tabindex="1" href="index.html">Home</a>
                 <a tabindex="2" href="about.html">About Me</a>
                 <a tabindex="3" href="resume.html" class="resume-link">Resume</a>
-                <a tabindex="4" href="https://github.com/daniel-citrus" target="_blank"
-                    class="github-link">GitHub</a>
+                <a tabindex="4" href="https://github.com/daniel-citrus" target="_blank" class="github-link">GitHub</a>
             </div>
             <div id="theme-switch"></div>
         </div>
@@ -37,8 +38,10 @@
         <div id="bio">
             <h2>Bio</h2>
             <p>
-                Hello! My name is Daniel Calvo and I am a Computer Science Alumni from <a target="_blank" href="https://en.wikipedia.org/wiki/Texas_A%26M_University%E2%80%93Commerce">
-                Texas A&M University-Commerce</a>. I am currently a Data Analyst for Pacific Gas & Electric. At the moment, my main responsibility is to assist the Risk Management
+                Hello! My name is Daniel Calvo and I am a Computer Science Alumni from <a target="_blank"
+                    href="https://en.wikipedia.org/wiki/Texas_A%26M_University%E2%80%93Commerce">
+                    Texas A&M University-Commerce</a>. I am currently a Data Analyst for Pacific Gas & Electric. At the
+                moment, my main responsibility is to assist the Risk Management
                 team in calculating Risk Spending Efficiency for the 2022 Wildfire Mitigation Plan.
             </p>
         </div>
@@ -51,7 +54,8 @@
                     investing and thorough budgeting in order to reach my ultimate goal of financial
                     independence and retiring early or
                     <span aria-hidden="true">&#128293;</span>
-                    <a target="_blank" href="https://www.investopedia.com/terms/f/financial-independence-retire-early-fire.asp">FIRE</a>
+                    <a target="_blank"
+                        href="https://www.investopedia.com/terms/f/financial-independence-retire-early-fire.asp">FIRE</a>
                     <span aria-hidden="true">&#128293;</span>.
                 </div>
 
@@ -63,8 +67,11 @@
                 <div class="description">
                     I strongly believe in health and fitness. Bodyweight exercises ensure a healthy body while also
                     providing functional and not only for looks muscles. At the moment, I am enjoying the
-                    <a target="_blank" href="https://www.reddit.com/r/bodyweightfitness/wiki/kb/recommended_routine">Recommended Routine</a>
-                    which is a Calisthenics/Bodyweight routine designed for beginner through intermediate fitness enthusiasts.
+                    <a target="_blank"
+                        href="https://www.reddit.com/r/bodyweightfitness/wiki/kb/recommended_routine">Recommended
+                        Routine</a>
+                    which is a Calisthenics/Bodyweight routine designed for beginner through intermediate fitness
+                    enthusiasts.
                 </div>
                 <img id="pushups_gif" src="/media/pushups.gif" alt="A person doing pushups.">
             </div>
@@ -74,7 +81,8 @@
     <footer>
         Powered by <a href="https://github.com/">Github.com</a>
         <div>
-            Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+            Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a
+                href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
         </div>
     </footer>
 
