--- a/resume.html
+++ b/resume.html
@@ -7,9 +7,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-        <!-- Main Stylesheet-->
+        <!-- Stylesheets -->
         <link href="/css/styles.css" type="text/css" rel="stylesheet">
-        <!-- Stylesheet containing theme colors -->
+        <!-- Stylesheet for theme switch -->
         <link href="/css/styles.css" rel="stylesheet" type="text/css" id="theme-switcher-id" />
         <!-- Google Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
