Update theme switch

--- a/about.html
+++ b/about.html
@@ -8,17 +8,14 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
         <!-- Stylesheets -->
-        <link href="/css/styles.css" type="text/css" rel="stylesheet">
-        <!-- Stylesheet for theme switch -->
-        <link href="/css/styles.css" rel="stylesheet" type="text/css" id="theme-switcher-id" />
+        <link href="/css/root.css" type="text/css" rel="stylesheet">
+        <link href="/css/themes/dark.css" type="text/css" rel="stylesheet">
         <!-- Google Fonts -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com">
+        <link href="https://fonts.gstatic.com" crossorigin>
         <!-- Nunito, Open Sans, & Inconsolata -->
         <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Nunito&family=Open+Sans&display=swap"
             rel="stylesheet">
-        <!-- Theme switcher-->
-        <script defer src="/js/theme-switch.js"></script>
 
         <title>About Me</title>
     </head>
@@ -62,7 +59,7 @@
                 <img id="money_saver" src="/media/Saving_Money.jpg" alt="Coins being placed into a jar.">
             </div>
 
-            <h3>Fitness</h3>
+            <h3 class="test">Fitness</h3>
             <div class="interest">
                 <div class="description">
                     I strongly believe in health and fitness. Bodyweight exercises ensure a healthy body while also
@@ -76,14 +73,15 @@
                 <img id="pushups_gif" src="/media/pushups.gif" alt="A person doing pushups.">
             </div>
         </div>
+        <footer>
+            Powered by <a href="https://github.com/">Github.com</a>
+            <div>
+                Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a
+                    href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+            </div>
+        </footer>
+        <!-- Theme switcher-->
+        <script defer src="/js/theme-switch.js"></script>
     </body>
-
-    <footer>
-        Powered by <a href="https://github.com/">Github.com</a>
-        <div>
-            Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a
-                href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
-        </div>
-    </footer>
 
 </html>
