--- a/resume.html
+++ b/resume.html
@@ -8,17 +8,14 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
         <!-- Stylesheets -->
-        <link href="/css/styles.css" type="text/css" rel="stylesheet">
-        <!-- Stylesheet for theme switch -->
-        <link href="/css/styles.css" rel="stylesheet" type="text/css" id="theme-switcher-id" />
+        <link href="/css/root.css" type="text/css" rel="stylesheet">
+        <link href="/css/themes/dark.css" type="text/css" rel="stylesheet">
         <!-- Google Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <!-- Nunito, Open Sans, & Inconsolata -->
         <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Nunito&family=Open+Sans&display=swap"
             rel="stylesheet">
-        <!-- Theme switcher-->
-        <script defer src="/js/theme-switch.js"></script>
 
         <title>Resume</title>
     </head>
@@ -36,14 +33,15 @@
 
         <div id="resume-typewriter" class="type-writer">Resume</div>
         <iframe src="/media/Calvo, Daniel - Resume.pdf" id="resume"></iframe>
+        <footer>
+            Powered by <a href="https://github.com/">Github.com</a>
+            <div>
+                Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a
+                    href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+            </div>
+        </footer>
+    
+        <!-- Theme switcher-->
+        <script defer src="/js/theme-switch.js"></script>
     </body>
-
-    <footer>
-        Powered by <a href="https://github.com/">Github.com</a>
-        <div>
-            Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a
-                href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
-        </div>
-    </footer>
-
 </html>
