320px screen compatibility

--- a/index.html
+++ b/index.html
@@ -21,15 +21,18 @@
     </head>
 
     <body>
-        <div class="home" id="theme-switch"></div>
-
-        <div id="home-typewriter" class="type-writer">My name is Daniel, welcome to my page!</div>
-        <div class="main-menu" role="navigation">
-            <a tabindex="1" href="index.html">Home</a>
-            <a tabindex="2" href="about.html">About Me</a>
-            <a tabindex="4" class="home-resume-link" href="resume.html">Resume</a>
-            <a tabindex="5" class="home-github-link" href="https://github.com/daniel-citrus" target="_blank">GitHub</a>
+        <div class="top-container">
+            <div role="nagivation" class="top-nav">
+                <a tabindex="1" href="index.html">Home</a>
+                <a tabindex="2" href="about.html">About Me</a>
+                <a tabindex="3" href="resume.html" class="resume-link">Resume</a>
+                <a tabindex="4" href="https://github.com/daniel-citrus" target="_blank" class="github-link">GitHub</a>
+            </div>
+            <div class="theme-switch" id="theme-switch"></div>
         </div>
+
+        <h1>Daniel Calvo</h1>
+        
         <footer>
             Powered by <a href="https://github.com/">Github.com</a>
             <div>
