--- a/resume.html
+++ b/resume.html
@@ -31,7 +31,7 @@
             <div class="theme-switch" id="theme-switch"></div>
         </div>
 
-        <div id="resume-typewriter" class="type-writer">Resume</div>
+        <h1>Resume</h1>
         <iframe src="/media/Calvo, Daniel - Resume.pdf" id="resume"></iframe>
         <footer>
             Powered by <a href="https://github.com/">Github.com</a>
