--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
             <div id="theme-switch"></div>
         </div>
 
-        <div id="about-typewriter" class="type-writer">About Me</div>
+        <h1>About Me</h1>
         <div id="bio">
             <h2>Bio</h2>
             <p>
