--- a/about.html
+++ b/about.html
@@ -10,13 +10,10 @@
         <!-- Stylesheets -->
         <link href="/css/root.css" type="text/css" rel="stylesheet">
         <link href="/css/themes/dark.css" type="text/css" rel="stylesheet">
-        <!-- Google Fonts -->
-        <link href="https://fonts.googleapis.com">
-        <link href="https://fonts.gstatic.com" crossorigin>
-        <!-- Nunito, Open Sans, & Inconsolata -->
-        <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Nunito&family=Open+Sans&display=swap"
-            rel="stylesheet">
-
+        <!-- Ubuntu Font -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
         <title>About Me</title>
     </head>
 
