Update theme switch

--- a/acknowledgements.html
+++ b/acknowledgements.html
@@ -22,7 +22,10 @@
             <div class="flex-item">
                 <div id="top-nav"></div>
             </div>
-            <div id="theme-switch"></div>
+            <button class="theme-switch" aria-label="dark mode toggle">
+                <img src="/media/icons/sun-Freepik.png" class="sun">
+                <img src="/media/icons/newmoon-Freepik.png" class="moon">
+            </button>
         </div>
 
         <div class="flex">
