--- a/resume.html
+++ b/resume.html
@@ -25,7 +25,10 @@
                 <a tabindex="3" href="resume.html" class="resume-link">Resume</a>
                 <a tabindex="4" href="https://github.com/daniel-citrus" target="_blank" class="github-link">GitHub</a>
             </div>
-            <div class="theme-switch" id="theme-switch"></div>
+            <button class="theme-switch" aria-label="dark mode toggle">
+                <img src="/media/icons/sun-Freepik.png" class="sun">
+                <img src="/media/icons/newmoon-Freepik.png" class="moon">
+            </button>
         </div>
 
         <h1>Resume</h1>
