--- a/index.html
+++ b/index.html
@@ -20,16 +20,27 @@
 
     <body>
         <div class="top-container">
-            <div role="nagivation" class="top-nav">
-                <a tabindex="1" href="index.html">Home</a>
-                <a tabindex="2" href="about.html">About Me</a>
-                <a tabindex="3" href="resume.html" class="resume-link">Resume</a>
-                <a tabindex="4" href="https://github.com/daniel-citrus" target="_blank" class="github-link">GitHub</a>
+            <img src="" class="main-logo">
+            <div class="top-controls">
+                <ul class="top-nav" aria-role="navigation">
+                    <li>
+                        <a tabindex="1" href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a tabindex="2" href="about.html">About Me</a>
+                    </li>
+                    <li>
+                        <a tabindex="3" href="resume.html" class="resume-link">Resume</a>
+                    </li>
+                    <li>
+                        <a tabindex="4" href="https://github.com/daniel-citrus" target="_blank" class="github-link">GitHub</a>
+                    </li>
+                </ul>
+                <button tabindex="5" class="theme-switch" aria-label="dark mode toggle">
+                    <img src="/media/icons/sun-Freepik.png" class="sun">
+                    <img src="/media/icons/newmoon-Freepik.png" class="moon">
+                </button>
             </div>
-            <button class="theme-switch" aria-label="dark mode toggle">
-                <img src="/media/icons/sun-Freepik.png" class="sun">
-                <img src="/media/icons/newmoon-Freepik.png" class="moon">
-            </button>
         </div>
 
         <h1>Daniel Calvo</h1>
