--- a/about.html
+++ b/about.html
@@ -35,6 +35,7 @@
                         <a tabindex="4" href="https://github.com/daniel-citrus" target="_blank" class="github-link">GitHub</a>
                     </li>
                 </ul>
+                <a id="nav-toggle" aria-roledescription="Top navigation toggle button"><span>test</span></a>
                 <button tabindex="5" class="theme-switch" aria-label="dark mode toggle">
                     <img src="/media/icons/sun-Freepik.png" class="sun">
                     <img src="/media/icons/newmoon-Freepik.png" class="moon">
