--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
                         <a tabindex="4" href="https://github.com/daniel-citrus" target="_blank" class="github-link">GitHub</a>
                     </li>
                 </ul>
-                <a id="nav-toggle"><span>Toggle Menu</span></a>
+                <a id="nav-toggle"><span>Toggle</span></a>
+                <div id="nav-panel"></div>
                 <button tabindex="5" class="theme-switch" aria-label="dark mode toggle">
                     <img src="/media/icons/sun-Freepik.png" class="sun">
                     <img src="/media/icons/newmoon-Freepik.png" class="moon">
