--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <body>
         <div class="top-container">
-            <img src="" class="main-logo">
+            <img src="media/logo/Light Citrus Web Designs Logo-A.png" class="main-logo">
             <div class="top-controls">
                 <ul class="top-nav" aria-role="navigation">
                     <li>
