--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
                         <a tabindex="1" href="index.html">Home</a>
                     </li>
                     <li>
-                        <a tabindex="2" href="about.html">About Me</a>
+                        <a tabindex="2" href="about.html" class="active">About Me</a>
                     </li>
                     <li>
                         <a tabindex="3" href="resume.html" class="resume-link">Resume</a>
@@ -59,13 +59,15 @@
             <h3>Finance</h3>
             <div class="interest">
                 <div class="description">
-                    I am an avid learner of finance and a habitual (but healthy) money saver. Currently, I enjoy simple
-                    investing and thorough budgeting in order to reach my ultimate goal of financial
-                    independence and retiring early or
-                    <span aria-hidden="true">&#128293;</span>
-                    <a target="_blank"
-                        href="https://www.investopedia.com/terms/f/financial-independence-retire-early-fire.asp">FIRE</a>
-                    <span aria-hidden="true">&#128293;</span>.
+                    <p>
+                        I am an avid learner of finance and a habitual (but healthy) money saver. Currently, I enjoy simple
+                        investing and thorough budgeting in order to reach my ultimate goal of financial
+                        independence and retiring early or
+                        <span aria-hidden="true">&#128293;</span>
+                        <a target="_blank"
+                            href="https://www.investopedia.com/terms/f/financial-independence-retire-early-fire.asp">FIRE</a>
+                        <span aria-hidden="true">&#128293;</span>.
+                    </p>
                 </div>
 
                 <img id="money_saver" src="/media/Saving_Money.jpg" alt="Coins being placed into a jar.">
