--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="top-controls">
                 <ul class="top-nav" aria-role="navigation">
                     <li>
-                        <a tabindex="1" href="index.html">Home</a>
+                        <a tabindex="1" href="index.html" class="active">Home</a>
                     </li>
                     <li>
                         <a tabindex="2" href="about.html">About Me</a>
@@ -45,7 +45,6 @@
             </div>
         </div>
 
-        <h1>Daniel Calvo</h1>
         
         <footer>
             Powered by <a href="https://github.com/">Github.com</a>
