--- a/resume.html
+++ b/resume.html
@@ -29,7 +29,7 @@
                         <a tabindex="2" href="about.html">About Me</a>
                     </li>
                     <li>
-                        <a tabindex="3" href="resume.html" class="resume-link">Resume</a>
+                        <a tabindex="3" href="resume.html" class="resume-link active">Resume</a>
                     </li>
                     <li>
                         <a tabindex="4" href="https://github.com/daniel-citrus" target="_blank" class="github-link">GitHub</a>
