--- a/index.html
+++ b/index.html
@@ -10,16 +10,13 @@
         <!-- Stylesheets -->
         <link href="/css/root.css" type="text/css" rel="stylesheet">
         <link href="/css/themes/dark.css" type="text/css" rel="stylesheet">
-        <!-- Ubuntu Font -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 
         <title>Welcome</title>
     </head>
 
     <body>
         <div class="top-container">
+            <img src="" class="main-logo">
             <div class="top-controls">
                 <ul class="top-nav" aria-role="navigation">
                     <li>
