Top nav styling fix

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
     <body>
         <div class="top-container">
+            <img src="" class="main-logo">
+
             <div class="top-controls">
                 <ul class="top-nav" aria-role="navigation">
                     <li>
@@ -32,7 +34,8 @@
                         <a tabindex="3" href="resume.html" class="resume-link">Resume</a>
                     </li>
                     <li>
-                        <a tabindex="4" href="https://github.com/daniel-citrus" target="_blank" class="github-link">GitHub</a>
+                        <a tabindex="4" href="https://github.com/daniel-citrus" target="_blank"
+                            class="github-link">GitHub</a>
                     </li>
                 </ul>
                 <a id="nav-toggle"><span>Toggle</span></a>
@@ -44,7 +47,7 @@
             </div>
         </div>
 
-        
+
         <footer>
             Powered by <a href="https://github.com/">Github.com</a>
             <div>
