--- a/about.html
+++ b/about.html
@@ -10,6 +10,16 @@
         <!-- Stylesheets -->
         <link href="/css/root.css" type="text/css" rel="stylesheet">
         <link href="/css/themes/dark.css" type="text/css" rel="stylesheet">
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-PW30ZBKNEK"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() { dataLayer.push(arguments); }
+            gtag('js', new Date());
+
+            gtag('config', 'G-PW30ZBKNEK');
+        </script>
         
         <title>About Me</title>
     </head>
@@ -117,4 +127,5 @@
         <script defer src="/js/theme-switch.js"></script>
         <!-- Mobile navigation-->
         <script defer src="/js/mobile-nav.js"></script>
+
 </html>
