--- a/about.html
+++ b/about.html
@@ -10,10 +10,7 @@
         <!-- Stylesheets -->
         <link href="/css/root.css" type="text/css" rel="stylesheet">
         <link href="/css/themes/dark.css" type="text/css" rel="stylesheet">
-        <!-- Ubuntu Font -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+
         <title>About Me</title>
     </head>
 
@@ -116,8 +113,8 @@
                     href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
             </div>
         </footer>
-        <!-- Theme switcher-->
-        <script defer src="/js/theme-switch.js"></script>
-        <!-- Mobile navigation-->
-        <script defer src="/js/mobile-nav.js"></script>
+
+        <!-- Core JS-->
+        <script defer src="/js/core.js"></script>
+
 </html>
