--- a/about.html
+++ b/about.html
@@ -3,6 +3,16 @@
 <html lang="en">
 
     <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-PW30ZBKNEK"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() { dataLayer.push(arguments); }
+            gtag('js', new Date());
+
+            gtag('config', 'G-PW30ZBKNEK');
+        </script>
+        
         <!-- Google Tag Manager -->
         <script>(function (w, d, s, l, i) {
                 w[l] = w[l] || []; w[l].push({
@@ -30,7 +40,7 @@
         <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T46Z6DH" height="0" width="0"
                 style="display:none;visibility:hidden"></iframe></noscript>
         <!-- End Google Tag Manager (noscript) -->
-        
+
         <div class="top-container">
             <img src="" class="main-logo">
             <div class="top-controls">
