--- a/about.html
+++ b/about.html
@@ -74,8 +74,7 @@
                 I am a Computer Science Alumni from <a target="_blank"
                     href="https://en.wikipedia.org/wiki/Texas_A%26M_University%E2%80%93Commerce">
                     Texas A&M University-Commerce</a>. I am currently a Webmaster for the Hayward Unified School
-                District. My main responsibility is to maintain all 30+ websites under the district while also
-                supporting other webmasters.
+                District managing over 30+ websites within the district.
             </p>
         </div>
 
